@@ -6,7 +6,7 @@
          <applyto>/apps/cairo-compmgr/default/menu-animation/duration</applyto>
          <owner>gnome</owner>
          <type>float</type>
-		 <default>0.35</default>
+		 <default>0.14</default>
          <locale name="C">
             <short>Opacity animation duration</short>
             <long>Opacity animation duration</long>
