@@ -1,3 +1,14 @@
+2008-01-25  Benoit Chauvin  <belou.bdc@gmail.com>
+
+    * plugins/menu-animation/ccm-menu-animation.schemas.in: 
+    * plugins/fade/ccm-fade.schemas.in: Change default plugins duration.
+
+2008-01-25  Carlos Diógenes  <cerdiogenes@gmail.com>
+
+    * src/ccm-extension-loader.c:
+    * src/ccm-extension.c:
+    * src/ccm-extension.h: Fix plugin sorting order
+
 2008-01-25  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
     * plugins/magnifier/ccm-magnifier.c:
